--- a/catalog.html
+++ b/catalog.html
@@ -98,13 +98,13 @@
                 <label for="hitachi">hitachi</label>
             </fieldset>
 
-            </fieldset class="power">
+            <fieldset class="power">
               <legend>Питание:</legend>
                 <input type="radio" id="accumulator" name="power" value="accumulator" checked>
                 <label for="accumulator">аккумуляторные</label>
                 <input type="radio" id="networked" name="power" value="networked">
                 <label for="networked">сетевые</label>
-            </fieldset>          
+            </fieldset>
 
             <input type="submit" value="Показать">
 
@@ -113,7 +113,6 @@
       </div>
 
         <!-- карточки товаров -->
-        <!-- У любого товара может быть метка «new» (не понял будет ли это img или какой-нибудь спан стилизованный с помощью цсс) -->
         <section class="catalog">
           <div class="sort">
             <span>Сортировка:</span>
@@ -125,46 +124,40 @@
           </div>
           <ul class="catalog-list">
             <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 3000</span>
-                </a>
-              </h3>
               <p class="catalog-item-image">
                 <a href="catalog-item.html">
                   <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
                 </a>
               </p>
+              <h3>
+                <a href="catalog-item.html">
+                  <span class="catalog-category">Перфоратор BOSCH</span>ч
+                  <span class="catalog-item-title">BFG 3000</span>
+                </a>
+              </h3>              
               <p class="catalog-item-price">
                 <span class="old-price">22500 ₽.</span>
                 <a class="button" href="#">15500 ₽.</a>
               </p>
             </li>
             <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 6000</span>
-                </a>
-              </h3>
               <p class="catalog-item-image">
                 <a href="catalog-item.html">
                   <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
                 </a>
               </p>
+              <h3>
+                <a href="catalog-item.html">
+                  <span class="catalog-category">Перфоратор BOSCH</span>
+                  <span class="catalog-item-title">BFG 6000</span>
+                </a>
+              </h3>              
               <p class="catalog-item-price">
                 <span class="old-price">30500 ₽.</span>
                 <a class="button" href="#">25500 ₽.</a>
               </p>
             </li>
-            <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 2000</span>
-                </a>
-              </h3>
+            <li class="catalog-item new">
               <p class="catalog-item-image">
                 <a>
                   <img src="#" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
@@ -172,108 +165,114 @@
                   <a class="button-bookmarks" href="#">в закладки</a>
                 </a>
               </p>
+              <h3>
+                <a href="catalog-item.html">
+                  <span class="catalog-category">Перфоратор BOSCH</span>
+                  <span class="catalog-item-title">BFG 2000</span>
+                </a>
+              </h3>              
               <p class="catalog-item-price">
                 <span class="old-price">30500 ₽.</span> <!-- Сделать невидимым или вообще убрать? -->
                 <a class="button" href="#">12500 ₽.</a>
               </p>
             </li>
             <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 3000</span>
-                </a>
-              </h3>
               <p class="catalog-item-image">
                 <a href="catalog-item.html">
                   <img src="img/product-4.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
                 </a>
               </p>
-              <p class="catalog-item-price">
-                <span class="old-price">22500 ₽.</span>
-                <a class="button" href="#">15500 ₽.</a>
-              </p>
-            </li>
-            <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 6000</span>
-                </a>
-              </h3>
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-5.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                </a>
-              </p>
-              <p class="catalog-item-price">
-                <span class="old-price">30500 ₽.</span>
-                <a class="button" href="#">25500 ₽.</a>
-              </p>
-            </li>
-            <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 2000</span>
-                </a>
-              </h3>
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-6.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                </a>
-              </p>
-              <p class="catalog-item-price">
-                <span class="old-price">30500 ₽.</span>
-                <a class="button" href="#">12500 ₽.</a>
-              </p>
-            </li>
-            <li class="catalog-item">
               <h3>
                 <a href="catalog-item.html">
                   <span class="catalog-category">Перфоратор BOSCH</span>
                   <span class="catalog-item-title">BFG 3000</span>
                 </a>
-              </h3>
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-7.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                </a>
-              </p>
+              </h3>              
               <p class="catalog-item-price">
                 <span class="old-price">22500 ₽.</span>
                 <a class="button" href="#">15500 ₽.</a>
               </p>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item new">
+              <p class="catalog-item-image">
+                <a href="catalog-item.html">
+                  <img src="img/product-5.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                </a>
+              </p>
               <h3>
                 <a href="catalog-item.html">
                   <span class="catalog-category">Перфоратор BOSCH</span>
                   <span class="catalog-item-title">BFG 6000</span>
                 </a>
-              </h3>
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-8.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                </a>
-              </p>
+              </h3>              
               <p class="catalog-item-price">
                 <span class="old-price">30500 ₽.</span>
                 <a class="button" href="#">25500 ₽.</a>
               </p>
             </li>
             <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 2000</span>
-                </a>
-              </h3>
               <p class="catalog-item-image">
                 <a href="catalog-item.html">
                   <img src="img/product-6.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
                 </a>
               </p>
+              <h3>
+                <a href="catalog-item.html">
+                  <span class="catalog-category">Перфоратор BOSCH</span>
+                  <span class="catalog-item-title">BFG 2000</span>
+                </a>
+              </h3>              
+              <p class="catalog-item-price">
+                <span class="old-price">30500 ₽.</span>
+                <a class="button" href="#">12500 ₽.</a>
+              </p>
+            </li>
+            <li class="catalog-item new">
+              <p class="catalog-item-image">
+                <a href="catalog-item.html">
+                  <img src="img/product-7.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                </a>
+              </p>
+              <h3>
+                <a href="catalog-item.html">
+                  <span class="catalog-category">Перфоратор BOSCH</span>
+                  <span class="catalog-item-title">BFG 3000</span>
+                </a>
+              </h3>              
+              <p class="catalog-item-price">
+                <span class="old-price">22500 ₽.</span>
+                <a class="button" href="#">15500 ₽.</a>
+              </p>
+            </li>
+            <li class="catalog-item">
+              <p class="catalog-item-image">
+                <a href="catalog-item.html">
+                  <img src="img/product-8.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                </a>
+              </p>
+              <h3>
+                <a href="catalog-item.html">
+                  <span class="catalog-category">Перфоратор BOSCH</span>
+                  <span class="catalog-item-title">BFG 6000</span>
+                </a>
+              </h3>              
+              <p class="catalog-item-price">
+                <span class="old-price">30500 ₽.</span>
+                <a class="button" href="#">25500 ₽.</a>
+              </p>
+            </li>
+            <li class="catalog-item">
+              <p class="catalog-item-image">
+                <a href="catalog-item.html">
+                  <img src="img/product-9.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                </a>
+              </p>
+              <h3>
+                <a href="catalog-item.html">
+                  <span class="catalog-category">Перфоратор BOSCH</span>
+                  <span class="catalog-item-title">BFG 2000</span>
+                </a>
+              </h3>              
               <p class="catalog-item-price">
                 <span class="old-price">30500 ₽.</span>
                 <a class="button" href="#">12500 ₽.</a>
