переписал разметку карточек

--- a/catalog.html
+++ b/catalog.html
@@ -124,159 +124,101 @@
           </div>
           <ul class="catalog-list">
             <li class="catalog-item">
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                </a>
-              </p>
+              <figure class="catalog-item-image">           
+                <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              </figure>              
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>ч
-                  <span class="catalog-item-title">BFG 3000</span>
-                </a>
-              </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">22500 ₽.</span>
-                <a class="button" href="#">15500 ₽.</a>
-              </p>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 3000</span>                
+              </h3>
+              <p class="old-price">22500 ₽.</p>
+              <p class="new-price">15500 ₽.</p>
             </li>
             <li class="catalog-item">
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                </a>
-              </p>
+              <figure class="catalog-item-image">           
+                <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+              </figure>              
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 6000</span>
-                </a>
-              </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">30500 ₽.</span>
-                <a class="button" href="#">25500 ₽.</a>
-              </p>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 6000</span>                
+              </h3>
+              <p class="old-price">30500 ₽.</p>
+              <p class="new-price">25500 ₽.</p>
             </li>
             <li class="catalog-item new">
-              <p class="catalog-item-image">
-                <a>
-                  <img src="#" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                  <a class="button-buy" href="#">купить</a>
-                  <a class="button-bookmarks" href="#">в закладки</a>
-                </a>
-              </p>
+              <a class="button-buy" href="#">Купить</a>
+              <a class="button-bookmarks" href="#">В закладки</a>       
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 2000</span>
-                </a>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 2000</span>                
               </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">30500 ₽.</span> <!-- Сделать невидимым или вообще убрать? -->
-                <a class="button" href="#">12500 ₽.</a>
-              </p>
+              <p class="new-price">15500 ₽.</p>
             </li>
             <li class="catalog-item">
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-4.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                </a>
-              </p>
+              <figure class="catalog-item-image">           
+                <img src="img/product-4.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              </figure>              
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 3000</span>
-                </a>
-              </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">22500 ₽.</span>
-                <a class="button" href="#">15500 ₽.</a>
-              </p>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 3000</span>                
+              </h3>
+              <p class="old-price">22500 ₽.</p>
+              <p class="new-price">15500 ₽.</p>
             </li>
             <li class="catalog-item new">
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-5.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                </a>
-              </p>
+              <figure class="catalog-item-image">
+                <img src="img/product-5.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+              </figure>              
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 6000</span>
-                </a>
-              </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">30500 ₽.</span>
-                <a class="button" href="#">25500 ₽.</a>
-              </p>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 6000</span>                
+              </h3>
+              <p class="old-price">30500 ₽.</p>
+              <p class="new-price">25500 ₽.</p>
             </li>
-            <li class="catalog-item">
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-6.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                </a>
-              </p>
+            <li class="catalog-item">  
+              <figure class="catalog-item-image">
+                <img src="img/product-6.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </figure>              
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 2000</span>
-                </a>
-              </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">30500 ₽.</span>
-                <a class="button" href="#">12500 ₽.</a>
-              </p>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 2000</span>                
+              </h3>
+              <p class="old-price">30500 ₽.</p>
+              <p class="new-price">12500 ₽.</p>
             </li>
             <li class="catalog-item new">
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-7.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                </a>
-              </p>
+              <figure class="catalog-item-image">
+                <img src="img/product-7.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              </figure>              
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 3000</span>
-                </a>
-              </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">22500 ₽.</span>
-                <a class="button" href="#">15500 ₽.</a>
-              </p>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 3000</span>                
+              </h3>
+              <p class="old-price">22500 ₽.</p>
+              <p class="new-price">15500 ₽.</p>
             </li>
             <li class="catalog-item">
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-8.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                </a>
-              </p>
+              <figure class="catalog-item-image">
+                <img src="img/product-8.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+              </figure>              
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 6000</span>
-                </a>
-              </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">30500 ₽.</span>
-                <a class="button" href="#">25500 ₽.</a>
-              </p>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 6000</span>                
+              </h3>
+              <p class="old-price">30500 ₽.</p>
+              <p class="new-price">25500 ₽.</p>
             </li>
             <li class="catalog-item">
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                  <img src="img/product-9.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                </a>
-              </p>
+              <figure class="catalog-item-image">
+                <img src="img/product-9.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </figure>              
               <h3>
-                <a href="catalog-item.html">
-                  <span class="catalog-category">Перфоратор BOSCH</span>
-                  <span class="catalog-item-title">BFG 2000</span>
-                </a>
-              </h3>              
-              <p class="catalog-item-price">
-                <span class="old-price">30500 ₽.</span>
-                <a class="button" href="#">12500 ₽.</a>
-              </p>
+                <span class="catalog-category">Перфоратор BOSCH</span>
+                <span class="catalog-item-title">BFG 2000</span>                
+              </h3>
+              <p class="old-price">30500 ₽.</p>
+              <p class="new-price">12500 ₽.</p>              
             </li>
           </ul>
           <ul class="pagination-list">
