карточки производителей, теперь ссылки

--- a/index.html
+++ b/index.html
@@ -53,11 +53,19 @@
 
     <main>
 
+      <section class="container promo">
+        <div class="promo-item new">
+          <h3>Материалы</h3>
+          <a href="#">На любой вкус</a>
 
+        </div>
+
+        
+
+      </section>
 
       <section class="goods-and-manufacturers">
         <div class="container">
-
           <div class="goods"> <!-- популярные товары -->
             <div>
               <h2>Популярные товары:</h2>
@@ -120,49 +128,32 @@
             <div class="manufacturers-list">
               <ul>
                 <li>
-                  <figure class="manufacturers-list-image">
-                    <img src="img/img-1.jpg" width="220" height="165" alt="Bosch">
-                  </figure>
+                  <a class="manufacturers-list-item" href="#"><img src="img/img-1.jpg" width="220" height="165" alt="Bosch"></a>
                 </li>
                 <li>
-                  <figure class="manufacturers-list-image">
-                    <img src="img/img-2.jpg" width="220" height="165" alt="makita">
-                  </figure>
+                  <a class="manufacturers-list-item" href="#"><img src="img/img-2.jpg" width="220" height="165" alt="makita"></a>
                 </li>
                 <li>
-                  <figure class="manufacturers-list-image">
-                    <img src="img/img-3.jpg" width="220" height="165" alt="deWALT">
-                  </figure>
+                  <a class="manufacturers-list-item" href="#"></a><img src="img/img-3.jpg" width="220" height="165" alt="deWALT"></a>
                 </li>
                 <li>
-                  <figure class="manufacturers-list-image">
-                    <img src="img/img-4.jpg" width="220" height="165" alt="Интерскол">
-                  </figure>
+                  <a class="manufacturers-list-item" href="#"></a><img src="img/img-4.jpg" width="220" height="165" alt="Интерскол"></a>
                 </li>
                 <li>
-                  <figure class="manufacturers-list-image">
-                    <img src="img/img-5.jpg" width="220" height="165" alt="Hitachi">
-                  </figure>
+                  <a class="manufacturers-list-item" href="#"><img src="img/img-5.jpg" width="220" height="165" alt="Hitachi"></a>
                 </li>
                 <li>
-                  <figure class="manufacturers-list-image">
-                    <img src="img/img-6.jpg" width="220" height="165" alt="LG">
-                  </figure>
+                  <a class="manufacturers-list-item" href="#"><img src="img/img-6.jpg" width="220" height="165" alt="LG"></a>
                 </li>
                 <li>
-                  <figure class="manufacturers-list-image">
-                    <img src="img/img-7.jpg" width="220" height="165" alt="AEG power solutions">
-                  </figure>
+                  <a class="manufacturers-list-item" href="#"><img src="img/img-7.jpg" width="220" height="165" alt="AEG power solutions"></a>
                 </li>
                 <li>
-                  <figure class="manufacturers-list-image">
-                    <img src="img/img-8.jpg" width="220" height="165" alt="metabo">
-                  </figure>
+                  <a class="manufacturers-list-item" href="#"><img src="img/img-8.jpg" width="220" height="165" alt="metabo"></a>
                 </li>
               </ul>
             </div>
           </div>
-
         </div>
       </section>
 
