добавлен блок description

--- a/catalog.html
+++ b/catalog.html
@@ -68,18 +68,17 @@
     </section>
 
     <main>
-      <div>
-        <div class="container">
-          <h1>Перфораторы</h1>
-        </div>
+
+      <div class="container">
+        <h1>Перфораторы</h1>
       </div>
 
       <!-- Секция фильтров -->
-      <section class="container-filters">        
+      <section class="container-filters">
         <div class="filters">
           <h2>Фильтр:</h2>
           <form>
-            
+
             <fieldset class="price">
               <legend>Цена:<legend>
               <input type="range" name="price" id="price" min="0" max="50000" step="1">
@@ -99,7 +98,6 @@
                 <input type="checkbox" id="hitachi" name="hitachi">
                 <label for="hitachi">hitachi</label>
             </fieldset>
-
             <fieldset class="power">
               <legend>Питание:</legend>
                 <input type="radio" id="accumulator" name="power" value="accumulator" checked>
@@ -114,123 +112,135 @@
         </div>
       </section>
 
-        <!-- карточки товаров -->
-        <div class="catalog-goods">
-          <div class="sort">
-            <span>Сортировка:</span>
-            <span>по цене</span>
-            <span>по типу</span>
-            <span>по функционалу</span>
-            <span>вверх</span>
-            <span>вниз</span>
-          </div>
-          <ul class="catalog-list">
-            <li class="catalog-item">
-              <figure class="catalog-item-image">           
-                <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-              </figure>              
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 3000</span>                
-              </h3>
-              <p class="old-price">22500 ₽.</p>
-              <p class="new-price">15500 ₽.</p>
-            </li>
-            <li class="catalog-item">
-              <figure class="catalog-item-image">           
-                <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-              </figure>              
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 6000</span>                
-              </h3>
-              <p class="old-price">30500 ₽.</p>
-              <p class="new-price">25500 ₽.</p>
-            </li>
-            <li class="catalog-item new">
-              <a class="button-buy" href="#">Купить</a>
-              <a class="button-bookmarks" href="#">В закладки</a>       
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 2000</span>                
-              </h3>              
-              <p class="new-price">15500 ₽.</p>
-            </li>
-            <li class="catalog-item">
-              <figure class="catalog-item-image">           
-                <img src="img/product-4.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-              </figure>              
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 3000</span>                
-              </h3>
-              <p class="old-price">22500 ₽.</p>
-              <p class="new-price">15500 ₽.</p>
-            </li>
-            <li class="catalog-item new">
-              <figure class="catalog-item-image">
-                <img src="img/product-5.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-              </figure>              
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 6000</span>                
-              </h3>
-              <p class="old-price">30500 ₽.</p>
-              <p class="new-price">25500 ₽.</p>
-            </li>
-            <li class="catalog-item">  
-              <figure class="catalog-item-image">
-                <img src="img/product-6.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-              </figure>              
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 2000</span>                
-              </h3>
-              <p class="old-price">30500 ₽.</p>
-              <p class="new-price">12500 ₽.</p>
-            </li>
-            <li class="catalog-item new">
-              <figure class="catalog-item-image">
-                <img src="img/product-7.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-              </figure>              
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 3000</span>                
-              </h3>
-              <p class="old-price">22500 ₽.</p>
-              <p class="new-price">15500 ₽.</p>
-            </li>
-            <li class="catalog-item">
-              <figure class="catalog-item-image">
-                <img src="img/product-8.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-              </figure>              
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 6000</span>                
-              </h3>
-              <p class="old-price">30500 ₽.</p>
-              <p class="new-price">25500 ₽.</p>
-            </li>
-            <li class="catalog-item">
-              <figure class="catalog-item-image">
-                <img src="img/product-9.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-              </figure>              
-              <h3>
-                <span class="catalog-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-title">BFG 2000</span>                
-              </h3>
-              <p class="old-price">30500 ₽.</p>
-              <p class="new-price">12500 ₽.</p>              
-            </li>
-          </ul>
-          <ul class="pagination-list">
-            <li class="pagination-item pagination-item-current"><a>1</a></li>
-            <li class="pagination-item"><a href="#">2</a></li>
-            <li class="pagination-item"><a href="#">3</a></li>
-            <li class="pagination-next"><a href="#">Следующая</a></li>
-          </ul>
+      <!-- карточки товаров -->
+      <section class="catalog-goods">
+
+        <div class="sort">
+          <span>Сортировка:</span>
+          <span>по цене</span>
+          <span>по типу</span>
+          <span>по функционалу</span>
+          <span>вверх</span>
+          <span>вниз</span>
         </div>
-      </div>
+
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <figure class="catalog-item-image">           
+              <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+            </figure>              
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 3000</span>                
+            </h3>
+            <p class="old-price">22500 ₽.</p>
+            <p class="new-price">15500 ₽.</p>
+          </li>
+          <li class="catalog-item">
+            <figure class="catalog-item-image">           
+              <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+            </figure>              
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 6000</span>                
+            </h3>
+            <p class="old-price">30500 ₽.</p>
+            <p class="new-price">25500 ₽.</p>
+          </li>
+          <li class="catalog-item new">
+            <a class="button-buy" href="#">Купить</a>
+            <a class="button-bookmarks" href="#">В закладки</a>       
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 2000</span>                
+            </h3>              
+            <p class="new-price">15500 ₽.</p>
+          </li>
+          <li class="catalog-item">
+            <figure class="catalog-item-image">           
+              <img src="img/product-4.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+            </figure>              
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 3000</span>                
+            </h3>
+            <p class="old-price">22500 ₽.</p>
+            <p class="new-price">15500 ₽.</p>
+          </li>
+          <li class="catalog-item new">
+            <figure class="catalog-item-image">
+              <img src="img/product-5.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+            </figure>              
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 6000</span>                
+            </h3>
+            <p class="old-price">30500 ₽.</p>
+            <p class="new-price">25500 ₽.</p>
+          </li>
+          <li class="catalog-item">  
+            <figure class="catalog-item-image">
+              <img src="img/product-6.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+            </figure>              
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 2000</span>                
+            </h3>
+            <p class="old-price">30500 ₽.</p>
+            <p class="new-price">12500 ₽.</p>
+          </li>
+          <li class="catalog-item new">
+            <figure class="catalog-item-image">
+              <img src="img/product-7.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+            </figure>              
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 3000</span>                
+            </h3>
+            <p class="old-price">22500 ₽.</p>
+            <p class="new-price">15500 ₽.</p>
+          </li>
+          <li class="catalog-item">
+            <figure class="catalog-item-image">
+              <img src="img/product-8.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+            </figure>              
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 6000</span>                
+            </h3>
+            <p class="old-price">30500 ₽.</p>
+            <p class="new-price">25500 ₽.</p>
+          </li>
+          <li class="catalog-item">
+            <figure class="catalog-item-image">
+              <img src="img/product-9.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+            </figure>              
+            <h3>
+              <span class="catalog-category">Перфоратор BOSCH</span>
+              <span class="catalog-item-title">BFG 2000</span>                
+            </h3>
+            <p class="old-price">30500 ₽.</p>
+            <p class="new-price">12500 ₽.</p>              
+          </li>
+        </ul>
+
+        <ul class="pagination-list">
+          <li class="pagination-item pagination-item-current"><a>1</a></li>
+          <li class="pagination-item"><a href="#">2</a></li>
+          <li class="pagination-item"><a href="#">3</a></li>
+          <li class="pagination-next"><a href="#">Следующая</a></li>
+        </ul>
+
+      </section>
+
+      <section class="container description">
+        <h2>Пара слов о перфораторах</h2>
+        <p>
+          Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+        </p>
+      </section>
+
     </main>
 
     <!-- ФУТЕР -->
